--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,7 @@
     <nav class="search-bar">
         <div class="container">
             <form action="{{ url_for('main.rechercher') }}" method="GET" class="d-flex">
-                <input type="text" name="nom" placeholder="Rechercher un établissement ou un flan..." class="form-control me-2">
+                <input type="text" name="nom" placeholder="Rechercher un établissement, une ville..." class="form-control me-2">
                 <button type="submit" class="btn btn-primary">Rechercher</button>
             </form>
         </div>
