--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,5 @@
+{% from "macros.html" import afficher_grille %}
+{% from "macros.html" import afficher_objet %}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -10,7 +12,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Lien vers le fichier CSS personnalisé -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    {% block scripts_head %}{% endblock %}
+
+    {% block scripts_head %}
+    {% endblock %}
 </head>
 <body>
     <header>
